# numeric

./: .clang-format  .clang-format-3.8  .gitignore  .ycm_extra_conf.py  Doxyfile  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  libtool
aux/m4/: m4_ax_code_coverage.m4
docs/: Doxyfile  Makefile.am  Makefile.in  MathJax.README  index.html  index.md
docs/doxygen-html/: annotated.html  cfunc_8hpp.html  cfunc_8hpp__dep__incl.map  cfunc_8hpp__dep__incl.md5  cfunc_8hpp_source.html  classdouble.html  classes.html  classinterval_3_01A_00_01R_01_4.html  classipoint_3_01I_00_01D_01_4.html  classnum_1_1cpoly-members.html  classnum_1_1cpoly.html  classnum_1_1cpoly_3_010_00_01V_00_01C_01_4-members.html  classnum_1_1cpoly_3_010_00_01V_00_01C_01_4.html  classnum_1_1cpoly_3_010_00_01V_00_01C_01_4__coll__graph.map  classnum_1_1cpoly_3_010_00_01V_00_01C_01_4__coll__graph.md5  classnum_1_1cpoly_3_010_00_01V_00_01C_01_4__inherit__graph.map  classnum_1_1cpoly_3_010_00_01V_00_01C_01_4__inherit__graph.md5  classnum_1_1cpoly_3_010_00_01dyndim_00_01dyndim_01_4-members.html  classnum_1_1cpoly_3_010_00_01dyndim_00_01dyndim_01_4.html  classnum_1_1cpoly_3_010_00_01dyndim_00_01dyndim_01_4__coll__graph.map  classnum_1_1cpoly_3_010_00_01dyndim_00_01dyndim_01_4__coll__graph.md5  classnum_1_1cpoly_3_010_00_01dyndim_00_01dyndim_01_4__inherit__graph.map  classnum_1_1cpoly_3_010_00_01dyndim_00_01dyndim_01_4__inherit__graph.md5  classnum_1_1cpoly_3_010_00_01dyndim_00_01dyndim_01_4_a6eeacfb68626536dae84a33bbae3d98b_cgraph.map  classnum_1_1cpoly_3_010_00_01dyndim_00_01dyndim_01_4_a6eeacfb68626536dae84a33bbae3d98b_cgraph.md5  classnum_1_1cpoly_3_010_00_01dyndim_00_01dyndim_01_4_a9236ac8a4bdbefdeec8d1bf9c93d7901_cgraph.map  classnum_1_1cpoly_3_010_00_01dyndim_00_01dyndim_01_4_a9236ac8a4bdbefdeec8d1bf9c93d7901_cgraph.md5  classnum_1_1cpoly_3_01D_00_01V_00_01dyndim_01_4-members.html  classnum_1_1cpoly_3_01D_00_01V_00_01dyndim_01_4.html  classnum_1_1cpoly_3_01D_00_01dyndim_00_01C_01_4-members.html  classnum_1_1cpoly_3_01D_00_01dyndim_00_01C_01_4.html  classnum_1_1cpoly_3_01D_00_01dyndim_00_01dyndim_01_4-members.html  classnum_1_1cpoly_3_01D_00_01dyndim_00_01dyndim_01_4.html  classnum_1_1cpoly_3_01D_00_01dyndim_00_01dyndim_01_4__coll__graph.map  classnum_1_1cpoly_3_01D_00_01dyndim_00_01dyndim_01_4__coll__graph.md5  classnum_1_1cpoly_3_01D_00_01dyndim_00_01dyndim_01_4__inherit__graph.map  classnum_1_1cpoly_3_01D_00_01dyndim_00_01dyndim_01_4__inherit__graph.md5  classnum_1_1cpoly_3_01D_00_01dyndim_00_01dyndim_01_4_a3891f9557bc4d786978ea61dc9fb8d1d_cgraph.map  classnum_1_1cpoly_3_01D_00_01dyndim_00_01dyndim_01_4_a3891f9557bc4d786978ea61dc9fb8d1d_cgraph.md5  classnum_1_1cpoly_3_01D_00_01dyndim_00_01dyndim_01_4_a46c50bd8615fcb058fd5a7735aca9299_cgraph.map  (+1153 more)
docs/doxygen-html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+74 more)
docs/examples/: .gitignore  Makefile.am  Makefile.in  dense_table_1.cpp  integral_1.cpp  interp_1.cpp  interp_1.gpi  interp_2.cpp  interp_2.gpi  units_1.cpp  units_2.cpp
docs/html/: classnum_1_1dimval-members.html  classnum_1_1dimval.html  classnum_1_1integral__stats.html  classnum_1_1interpolant-members.html  classnum_1_1interpolant.html  config_8h_source.html  dimensions_8hpp_source.html  dimval_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_i.html  functions_j.html  functions_n.html  functions_o.html  functions_rela.html  functions_v.html  functions_vars.html  functions_w.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_5.map  integral_8hpp.html  integral_8hpp__incl.map  integral_8hpp__incl.md5  integral_8hpp_source.html  integral__stats_8hpp_source.html  interpolant_8hpp_source.html  interval_8hpp.html  interval_8hpp__dep__incl.map  interval_8hpp__dep__incl.md5  interval_8hpp__incl.map  (+144 more)
docs/html/search/: all_1.js  all_11.js  all_13.js  all_15.js  all_2.js  all_3.js  all_8.js  all_9.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_f.js  files_0.js  functions_1.js  functions_2.js  functions_b.js  functions_c.js  functions_f.js  related_0.js  related_1.js  related_4.js  searchdata.js  typedefs_6.js  typedefs_7.js  typedefs_a.js  variables_10.js  variables_5.js  variables_7.js  variables_9.js  variables_a.js  variables_d.js
m4/: m4_ax_code_coverage.m4
src/: .gitignore  Makefile.am  Makefile.in  cfunc.hpp  config.h.in  cpoly.hpp  dense-table.hpp  dim-exps.hpp  dimensions  dimensions.pl  dimensions.txt  dimval.cpp  dimval.hpp  dimval.md  ilist.hpp  integral-stats.hpp  integral.hpp  integral.md  integral_stats.hpp  interpolant.hpp  interval.hpp  linterp.md  mainpage.md  numeric.dox  rfunc.hpp  rk.hpp  rpoly.hpp  sparse-table.cpp  sparse-table.hpp  template.hpp  units  units.pl  units.txt  util.hpp
src/examples/: .gitignore  Makefile.am  Makefile.in  interp_1.gpi  units_1.cpp
test/: .gitignore  Makefile.am  Makefile.in  cpoly_test.cpp  dimval_test.cpp  integral_test.cpp  interpolant_test-badinput.txt  interpolant_test-badinput2.txt  interpolant_test-shortinput.txt  interpolant_test.cpp  interpolant_test.txt  tests.cpp  units_test.cpp
